# notes

./: .gitignore  CMakeLists.txt  PRODUCTION_READY_IMPROVEMENTS.md  README.md  RELEASE_GUIDE.md  env.example  index.html  notes_0.1.0-1_amd64.deb
config/: google_drive_config.ini.example
debian/: control  files  notes.desktop  notes.substvars  rules
debian/.debhelper/notes/: dbgsym-build-ids
debian/.debhelper/notes/dbgsym-root/DEBIAN/: control  md5sums
debian/notes/DEBIAN/: control  md5sums
debian/notes/usr/share/applications/: notes.desktop
docs/: GOOGLE_DRIVE_SETUP.md  GOOGLE_DRIVE_SUMMARY.md  MARKDOWN_STORAGE_README.md  SECURE_SETUP.md
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake
obj-x86_64-linux-gnu/Notes_autogen/: deps  mocs_compilation.cpp
obj-x86_64-linux-gnu/Notes_autogen/3YJK5W5UP7/: qrc_resources.cpp
obj-x86_64-linux-gnu/Notes_autogen/RLKJE3IM4Y/: moc_DatabaseManager.cpp.d
obj-x86_64-linux-gnu/Notes_autogen/YPKJ5OE7LN/: moc_MainWindow.cpp.d  moc_MarkdownEditor.cpp.d  moc_MarkdownHighlighter.cpp  moc_MarkdownHighlighter.cpp.d  moc_NoteListDelegate.cpp.d  moc_NotesModel.cpp.d  moc_SettingsDialog.cpp  moc_SettingsDialog.cpp.d
resources/: resources.qrc
resources/styles/: app.qss
scripts/: validate_config.py
src/: main.cpp
src/db/: DatabaseManager.cpp  DatabaseManager.h
src/sync/: ConfigLoader.cpp  ConfigLoader.h  GoogleDriveConfig.cpp  GoogleDriveConfig.h  GoogleDriveManager.cpp  GoogleDriveManager.h  SyncIntegrationExample.cpp  SyncManager.cpp  SyncManager.h
src/ui/: GoogleAuthDialog.cpp  GoogleAuthDialog.h  MainWindow.cpp  MainWindow.h  MarkdownEditor.cpp  MarkdownHighlighter.cpp  MarkdownHighlighter.h  NoteListDelegate.cpp  NoteListDelegate.h  NotesModel.cpp  NotesModel.h  SettingsDialog.cpp  SettingsDialog.h  TextEditor.cpp  TextEditor.h
src/utils/: Logger.cpp  Logger.h  Roles.h
